search and details page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 
     <header>
-        <div class="head-container">
+        <div class="stick-header">
+            <div class="head-container">
             <div class="head-bar">
                 <div class="logo-container">
                     <a href="#"><img class="logo" src="assets/img/exxen-logo.png" alt=""></a>
@@ -44,6 +45,9 @@
                 <div class="button">
                     <button type=" button" class="language-btn"><i class="fa-solid fa-globe"></i>Tr</button>
                     <button type="button" class="login-btn">Uye Girisi</button>
+                    <div class="burger-btn">
+                        <i class="fa-solid fa-bars fa-2x"></i>
+                    </div>
                 </div>
             </div>
 
@@ -54,6 +58,7 @@
                     <button type="submit">Uye Ol</button>
                 </form>
             </div>
+        </div>
         </div>
 
 
@@ -91,44 +96,104 @@
                             <p>Film 3 haqqında qısa məlumat.</p>
                         </div>
                     </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/fury.jpg" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Fury</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/gone-girl-2014.webp" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Gone-Girl</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
                 </div>
-            </div>
-
-            <div class="card-container">
-                <button class="carousel-control-prev" type="button" data-bs-target="#exxenSlider" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                </button>
-
-                <button class="carousel-control-next" type="button" data-bs-target="#exxenSlider" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                </button>
-
-                <button class="scroll-btn left-btn">&lt;</button>
-                <div class="row id" id="movies">
-
+                <div class="carousel-item">
+                        <img src="assets/img/inception-2010.webp" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Inception</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
                 </div>
-                <button class="scroll-btn right-btn">&gt;</button>
-            </div>
+                <div class="carousel-item">
+                        <img src="assets/img/inglourious-basterds-2009.webp" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Inglourious Basterds</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                </div>
+                <div class="carousel-item">
+                        <img src="assets/img/la-casa-de-papel.jpg" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>La Casa De Papel</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                </div>
+                <div class="carousel-item">
+                        <img src="assets/img/prison break.jpg" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Prison Break</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                </div>
+                <div class="carousel-item">
+                        <img src="assets/img/seven-1995.webp" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Seven</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                </div>
+                <div class="carousel-item">
+                        <img src="assets/img/Shutter-island.webp" class="d-block w-100" alt="Slide 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Shutter Island</h5>
+                            <p>Film 3 haqqında qısa məlumat.</p>
+                        </div>
+                </div>
+                </div>
 
-        </div>
+                <div class="card-container">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#exxenSlider"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#exxenSlider"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </button>
+
+                    <button class="scroll-btn left-btn">&lt;</button>
+                    <div class="row id" id="movies">
+
+                    </div>
+                    <button class="scroll-btn right-btn">&gt;</button>
+                </div>
+
+            </div>
     </main>
 
     <footer>
         <div class="head-container">
-            <div class="foot-container">
-                <div class="salam">
-                    <div class="playstore">
-                        <a href="#">
-                            <img src="assets/img/playstore.jpeg" alt="GET IT ON GooglePlay">
-                            <p>GET IT ON GooglePlay</p>
-                        </a>
+            <div class="foot-bar">
+                <div class="foot-container">
+                    <div class="store">
+                        <div class="playstore">
+                            <a href="#">
+                                <img src="assets/img/PlayStore.svg" alt="GET IT ON GooglePlay">
 
-                    </div>
-                    <div class="appstore">
-                        <a href="#">
-                            <img src="assets/img/AppStore.png" alt="Download on the AppStore">
-                            <span>Download on the AppStore</span></a>
+                            </a>
 
+                        </div>
+                        <div class="appstore">
+                            <a href="#">
+                                <img src="assets/img/AppStore.svg" alt="Download on the AppStore">
+
+
+                        </div>
                     </div>
                     <div class="list">
                         <ul>
@@ -145,8 +210,8 @@
                             <li><a href="#">İlgili Kişi Formu</a></li>
                         </ul>
                     </div>
-                </div>
 
+                </div>
                 <div class="social">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -155,10 +220,14 @@
                     <a href="#"><i class="fa-brands fa-tiktok"></i></a>
 
                 </div>
+
             </div>
+
 
         </div>
     </footer>
+
+
 
 
 
