--- a/search.html
+++ b/search.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-     <header>
+    <header>
         <div class="head-container">
             <div class="head-bar">
                 <div class="logo-container">
@@ -53,21 +55,71 @@
 
 
     </header>
-   <main>
-     <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-  <input type="text" id="searchInput" placeholder="Search the Film">
-</div>
+    <main>
+        <div class="search-box">
+            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+            <input type="text" id="searchInput" placeholder="Search the Film">
+        </div>
 
-<div class="row" id="movies">
+        <div class="row" id="movies">
 
-</div>
-   </main>
+        </div>
+    </main>
+    <footer>
+        <div class="head-container">
+            <div class="foot-bar" >
+                <div class="foot-container">
+                    <div class="store">
+                        <div class="playstore">
+                            <a href="#">
+                                <img src="assets/img/PlayStore.svg" alt="GET IT ON GooglePlay">
+
+                            </a>
+
+                        </div>
+                        <div class="appstore">
+                            <a href="#">
+                                <img src="assets/img/AppStore.svg" alt="Download on the AppStore">
 
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+                        </div>
+                    </div>
+                    <div class="list">
+                        <ul>
+                            <li><a href="#">Çerez Politikası</a></li>
+                            <li><a href="#">KVK Politikası</a></li>
+                            <li><a href="#">Kullanım Şartları</a></li>
+                            <li><a href="#">Üyelik Sözleşmesi</a></li>
+                            <li><a href="#">Çerez Tercihlerimi Yönet</a></li>
+                        </ul>
+                        <ul class="ul">
+                            <li><a href="#">Bize Ulaşın</a></li>
+                            <li><a href="#">SSS</a></li>
+                            <li><a href="#">Şirket Künyes</a></li>
+                            <li><a href="#">İlgili Kişi Formu</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="social">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-solid fa-xmark"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+
+                </div>
+
+            </div>
+
+
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script src="assets/js/search.js"></script>
 </body>
+
 </html>
