--- a/search.html
+++ b/search.html
@@ -24,31 +24,40 @@
                 <div class="nav-container">
                     <ul>
                         <li>
-                            <a href="index.html"><i class="fa-regular fa-house"></i>Kesfet</a>
+                            <a href="index.html"><i class="fa-regular fa-house"></i>Explore</a>
 
                         </li>
 
                         <li>
-                            <a href="#"><i class="fa-solid fa-tv"></i>Canli</a>
+                            <a href="#"><i class="fa-solid fa-tv"></i>Live</a>
 
                         </li>
                         <li>
-                            <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i>Arama</a>
+                            <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i>Search</a>
 
                         </li>
                     </ul>
                 </div>
-                <div class="button">
-                    <button type=" button" class="language-btn"><i class="fa-solid fa-globe"></i>Tr</button>
-                    <button type="button" class="login-btn">Uye Girisi</button>
-                </div>
+               <div class="button">
+                        <button type="button" class="language-btn">
+                            <i class="fa-solid fa-globe"></i> <span>Tr</span>
+                        </button>
+                        <button type="button" class="login-btn">Log In</button>
+                        <div class="burger-btn">
+                            <i class="fa-solid fa-bars fa-2x"></i>
+                        </div>
+                        <div class="language-menu">
+                            <p data-lang="En">Engilish</p>
+                            <p data-lang="Tr">Turkish</p>
+                        </div>
+                    </div>
             </div>
 
             <div class="form">
                 <form>
-                    <input type="text" placeholder="Ad Soyad">
-                    <input type="email" placeholder="E-posta">
-                    <button type="submit">Uye Ol</button>
+                    <input type="text" placeholder="Name and Surname">
+                    <input type="email" placeholder="Email">
+                    <button type="submit">Register</button>
                 </form>
             </div>
         </div>
@@ -57,17 +66,18 @@
     </header>
     <main>
         <div class="search-box">
-            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+            <i class="fa-solid fa-magnifying-glass fa -2x"></i>
             <input type="text" id="searchInput" placeholder="Search the Film">
         </div>
 
         <div class="row" id="movies">
 
         </div>
+
     </main>
-    <footer>
+     <footer>
         <div class="head-container">
-            <div class="foot-bar" >
+            <div class="foot-bar">
                 <div class="foot-container">
                     <div class="store">
                         <div class="playstore">
@@ -86,17 +96,17 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <li><a href="#">Çerez Politikası</a></li>
-                            <li><a href="#">KVK Politikası</a></li>
-                            <li><a href="#">Kullanım Şartları</a></li>
-                            <li><a href="#">Üyelik Sözleşmesi</a></li>
-                            <li><a href="#">Çerez Tercihlerimi Yönet</a></li>
+                            <li><a href="#">Cookie Policy</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="#">Membership Agreement</a></li>
+                            <li><a href="#">Manage Privacy Preferences</a></li>
                         </ul>
                         <ul class="ul">
-                            <li><a href="#">Bize Ulaşın</a></li>
-                            <li><a href="#">SSS</a></li>
-                            <li><a href="#">Şirket Künyes</a></li>
-                            <li><a href="#">İlgili Kişi Formu</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Corporate Information</a></li>
+                            <li><a href="#">Application Form for Relevant Person</a></li>
                         </ul>
                     </div>
 
