--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </button>
                         <button type="button" class="login-btn">Log In</button>
                         <div class="burger-btn">
-                            <i class="fa-solid fa-bars fa-2x"></i>
+                            <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
                         </div>
                         <div class="language-menu">
                             <p data-lang="En">Engilish</p>
