--- a/search.html
+++ b/search.html
@@ -43,8 +43,24 @@
                             <i class="fa-solid fa-globe"></i> <span>Tr</span>
                         </button>
                         <button type="button" class="login-btn">Log In</button>
-                        <div class="burger-btn">
-                            <i class="fa-solid fa-bars fa-2x"></i>
+                         <button id="burger-btn" type="button" class="burger-toggle">
+                            <i class="fa-solid fa-bars"></i>
+                        </button>
+
+                        <div id="burger-menu">
+                            <button class="close-menu"><i class="fa-solid fa-xmark"></i></button>
+
+                            <div class="menu-profile">
+                                <i class="fa-solid fa-user"></i>
+                                <button class="login-register">Login / Register</button>
+                            </div>
+
+                            <ul class="menu-links">
+                                <a href="index.html"><li class="active"><i class="fa-regular fa-house"></i> Explore</li></a>
+                                <li><i class="fa-solid fa-tv"></i> Live</li>
+                                <a href="search.html"><li><i class="fa-solid fa-magnifying-glass"></i> Search</li></a>
+                                <li><i class="fa-regular fa-circle-question"></i> Help</li>
+                            </ul>
                         </div>
                         <div class="language-menu">
                             <p data-lang="En">Engilish</p>
